tests/invariants/pass/case.act
constructor of C
interface constructor()

creates
   uint x := 0

invariants
  x == 0
	
behaviour bar of C
interface bar(uint z)

iff
   CALLVALUE == 0

case z == 0:

storage
  x => z

case 0 < z:

storage
  x => 0