tests/invariants/fail/constructor-type-bounds.act
constructor of C
interface constructor()

creates

    int totalSupply := -1

invariants

    totalSupply > 0
